--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,7 @@
 .img-box:hover {
     box-shadow: inset 0 0 20px var(--color-blue-500);
 }
+
+.shadow-custom {
+    box-shadow: 3px 3px 15px lightgray;
+}
